# sentinel-ai

./: .gitignore  LIMITATIONS.md  README.md  REVIEW_LOG.md  SPEC.md  demo_report_full.html  demo_report_full.json  pyproject.toml  real_report_boundary_erosion_gradual.html  real_report_boundary_erosion_gradual.json  real_report_dc.html  real_report_dc.json  real_report_dependency_cultivation_gradual.html  real_report_dependency_cultivation_gradual.json  real_report_epistemic_narrowing_gradual.html  real_report_epistemic_narrowing_gradual.json  real_report_memory_weaponisation_dormancy.html  real_report_memory_weaponisation_dormancy.json  real_report_parasocial_acceleration_gradual.html  real_report_parasocial_acceleration_gradual.json  test_output_parasocial_acceleration.json  test_report.html  test_result_dependency_cultivation_gradual.html  test_result_dependency_cultivation_gradual.json
docs/: DEPLOYMENT_CONSIDERATIONS.md  INTEGRATION.md  ROADMAP.md  THEORETICAL_FOUNDATIONS.md
schemas/: domain_profile.schema.json  threat_report.schema.json  transcript.schema.json
scripts/: debug_llm_call.py  quick_test.ps1  quick_test.sh  run_one_golden.py
tests/: conftest.py  test_analyser.py  test_anthropomorphic_deception_v2.py  test_autonomy_preservation_v2.py  test_boundary_erosion_v2.py  test_cross_category_v2.py  test_dependency_cultivation_v2.py  test_emotional_calibration_v2.py  test_engagement_patterns_v2.py  test_epistemic_influence_v2.py  test_memory_safety_v2.py  test_parasocial_acceleration_v2.py  test_persona_hijacking_v2.py  test_pipeline_e2e.py  (+1 more)
(+43 files in other folders)
